added main description

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,11 @@
   text-align: left !important;
 }
 
+.subheading {
+  text-align: center;
+  font-weight: 600;
+}
+
 .intro {
   text-align: center;
   padding: 3em 1em 3em 1em;
@@ -95,13 +100,22 @@
   border-color: #F8F8F8;
 }
 
-.faq {
+.main {
   padding: 0.5em;
 }
 
-.faq .faq-title {
-  text-align: center;
-  font-weight: 600;
+.main b {
+  color: #22559c;
+  font-weight: 400;
+}
+
+.main .main-txt {
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.faq {
+  padding: 0.5em;
 }
 
 .faq .faq-text {
