--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -92,7 +92,7 @@
 
     .main-txt {
         font-size: 18px;
-        font-weight: 300;
+        font-weight: 400;
     }
 }
 
@@ -104,7 +104,7 @@
 }
 
 .faq-question {
-    font-weight: 300;
+    font-weight: 400;
     color: black;
     text-align: center;
     font-size: 18px !important;
@@ -120,7 +120,8 @@
     padding: 1em;
     margin-top: 1em;
     text-align: center;
-    color: #22559c;
+    // color: #22559c;
+    font-weight: 300;
 }
 
 @media only screen and (min-width: 768px) {
