add title class, fixed spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,13 +5,9 @@
 
 .nav-item {
   font-size: 18px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   text-align: center;
-  -webkit-box-align: center !important;
-      -ms-flex-align: center !important;
-          align-items: center !important;
+  align-items: center !important;
   text-align: left !important;
 }
 
@@ -24,12 +20,16 @@ a {
   font-weight: 600;
 }
 
+.title {
+  justify-content: center;
+  text-align: center;
+  margin: 0.3em 0em 2em 0em;
+}
+
 .intro {
   text-align: center;
   padding: 6em 1em 3em 1em;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 .intro h1 {
@@ -78,9 +78,7 @@ a {
 .team {
   text-align: center;
   padding: 2em 1em 2em 1em;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 .team .team-img {
@@ -131,9 +129,7 @@ a {
   color: black;
   text-align: center;
   font-size: 18px !important;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 .faq-question .faq-question-header {
@@ -168,4 +164,3 @@ a {
     padding: 1em 7em 0em 7em;
   }
 }
-/*# sourceMappingURL=styles.css.map */
