--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -21,6 +21,12 @@ a {
     font-weight: 600;
 }
 
+.title {
+  justify-content: center;
+  text-align: center;
+  margin: 0.3em 0em 2em 0em;
+}
+
 .intro {
     text-align: center;
     padding: 6em 1em 3em 1em;
