--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -165,6 +165,15 @@ a {
   }
 }
 
+.mySlides2 {
+    display: none;
+    padding: 80px;
+    blockquote {
+      text-align: left;
+    }
+  }
+  
+
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
